[metadata]
name = sandbox
summary = Sandbox for Sbauza
description-file =
    README.rst
author = Sylvain Bauza
author-email = sbauza+removeme@free.fr
home-page = http://sbauza.wordpress.com
classifier =
    Environment :: Console
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    sandbox

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = sandbox/locale
domain = sandbox

[update_catalog]
domain = sandbox
output_dir = sandbox/locale
input_file = sandbox/locale/sandbox.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = sandbox/locale/sandbox.pot
